--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-# javascript-loops-practice
-This repository contains JavaScript practice exercises focused on loops (for, while). It includes small programs for learning repetition structures and improving logic building skills.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+    <script src="../class-2/Loop Task.js.js"></script> 
+
+</body>
+</html> 
+
+
+
